--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=K2D:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
-    <title>Vite + React + TS</title>
+    <title>Espresso Reads</title>
   </head>
   <body>
     <div id="root"></div>
